// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<div
  className="MuiFormControl-root-12 CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root-27 MuiFormLabel-required-32 MuiInputLabel-required-20 MuiInputLabel-root-16 MuiInputLabel-formControl-21 MuiInputLabel-animated-24 CustomInput-labelRoot-6 "
    data-shrink={false}
    htmlFor=""
  >
    Required
    <span
      className="MuiFormLabel-asterisk-33"
    >
       *
    </span>
  </label>
  <div
    className="MuiInputBase-root-47 MuiInput-root-34 MuiInput-underline-38 CustomInput-underline-2 MuiInputBase-formControl-48 MuiInput-formControl-35"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-57 MuiInput-input-42 CustomInput-input-10"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> renders correctly if formControlProps and labelText is not passed 1`] = `
<div
  className="MuiFormControl-root-12 CustomInput-formControl-9"
>
  <div
    className="MuiInputBase-root-47 MuiInput-root-34 MuiInput-underline-38 CustomInput-underline-2 MuiInputBase-formControl-48 MuiInput-formControl-35"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-57 MuiInput-input-42 CustomInput-input-10"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> renders correctly in error state 1`] = `
<div
  className="MuiFormControl-root-12 CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root-27 MuiInputLabel-root-16 MuiInputLabel-formControl-21 MuiInputLabel-animated-24 CustomInput-labelRoot-6 "
    data-shrink={false}
    htmlFor=""
  >
    Error Input Prop
  </label>
  <div
    aria-label="Description"
    className="MuiInputBase-root-47 MuiInput-root-34 MuiInput-underline-38 CustomInput-underline-2 MuiInputBase-error-53 MuiInput-error-39 MuiInputBase-formControl-48 MuiInput-formControl-35"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      className="MuiInputBase-input-57 MuiInput-input-42 CustomInput-input-10"
      disabled={false}
      id=""
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`<Input /> renders correctly in success state 1`] = `
<div
  className="MuiFormControl-root-12 CustomInput-formControl-9"
>
  <label
    className="MuiFormLabel-root-27 MuiInputLabel-root-16 MuiInputLabel-formControl-21 MuiInputLabel-animated-24 CustomInput-labelRoot-6  CustomInput-labelRootSuccess-8"
    data-shrink={false}
    htmlFor="success"
  >
    Success Prop
  </label>
  <div
    className="MuiInputBase-root-47 MuiInput-root-34 MuiInput-underline-38 CustomInput-underlineSuccess-4 CustomInput-underline-2 MuiInputBase-formControl-48 MuiInput-formControl-35"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-57 MuiInput-input-42 CustomInput-input-10"
      disabled={false}
      id="success"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;
